--- a/index.html
+++ b/index.html
@@ -85,59 +85,49 @@ var rightOperand = " ";
 var result = " ";
 
 $(".number").click(function() {
-    console.log("number event");
     if (leftOperand == " ") {
-        leftOperand = $(".number").attr("value");
+        leftOperand = $(this).attr("value");
+        $("#firstNumber").text(leftOperand);
     } else {
         if (operator != " " && rightOperand == " ") {
-            rightOperand = $(".number").attr("value");
+            rightOperand = $(this).attr("value");
+            $("#secondNumber").text(rightOperand);
         }
     }
-    console.log("leftOperand = " + leftOperand);
-    console.log("operator = " + operator);
-    console.log("rightOperand = " + rightOperand);
 });
 
 $(".operator").click(function() {
-    console.log("operator event");
-    if (leftOperand != " " && operator == " ") {
-        operator = $(".operator").attr("value");
+    var realOperator = " ";
+   realOperator = $(this).attr("value");
+     if (leftOperand != " " && operator == " ") {
+        switch (realOperator) {
+            case "plus":
+                realOperator = "+";
+                break;
+            case "minus":
+                realOperator = "-";
+                break;
+            case "times":
+                realOperator = "*";
+                break;
+            case "divide":
+                realOperator = "/";
+                break;
+            case "power":
+                realOperator = "^";
+                break;
+        };
+        operator = realOperator;
+        $("#operator").text(operator);
     }
-    console.log("leftOperand = " + leftOperand);
-    console.log("operator = " + operator);
-    console.log("rightOperand = " + rightOperand);
 });
 
 $(".equal").click(function() {
-    console.log("equal event");
     var equation = "";
     if (leftOperand != " " && operator != " " && rightOperand != " ") {
-        equation += leftOperand;
-        switch (operator) {
-            case "plus":
-                equation += "+";
-                break;
-            case "minus":
-                equation += "-";
-                break;
-            case "times":
-                equation += "*";
-                break;
-            case "divide":
-                equation += "/";
-                break;
-            case "power":
-                equation += "^";
-                break;
-        }
-        equation += rightOperand;
+        equation = leftOperand + operator + rightOperand;
         result = eval(equation);
-     
-     console.log("leftOperand = " + leftOperand);
-    console.log("operator = " + operator);
-    console.log("rightOperand = " + rightOperand);
-    console.log("equation = " + equation);
-    console.log("result = " + result);
+        $("#result").text(result);
    }
 });
 
